[package]
name = "beesweeper"
version = "0.1.0"
authors = ["Mihai Blebea <mihai@getchip.uk>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]


[dependencies]
# rand = "0.7.3"
wasm-bindgen = "0.2.63"
stdweb = "0.4"
rand = { version = "0.7", features = ["wasm-bindgen"] }